fix: update page title and meta tag for improved SEO and clarity in the medical cost estimator

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>公眾醫療費用計算器（香港醫管局制度版）</title>
+    <title>公香港公共醫療費用計算器（2026版）</title>
+    <meta name="google-site-verification" content="uCwsupgAuz1T6tnREGryWzv96y9X8uisu3b2EXIl5FA" />
   </head>
   <body>
     <div id="root"></div>
