--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
       })(window, document, "script", "dataLayer", "GTM-K653FBQX");
     </script>
     <!-- End Google Tag Manager -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P2WLE6L5NS"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-P2WLE6L5NS");
+    </script>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
